# hukt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  tsconfig.base.json
.github/workflows/: ci.yml
anchor/: Anchor.toml  README.md  package.json  tsconfig.json
anchor/programs/hukt_hooks/: Cargo.toml
anchor/programs/hukt_hooks/src/: errors.rs  hooks.rs  lib.rs  meta.rs  state.rs
anchor/programs/hukt_registry/: Cargo.toml
anchor/programs/hukt_registry/src/: lib.rs
anchor/tests/: hukt_hooks.ts  hukt_registry.ts
docs/: architecture.md  hook-spec.md  security.md
examples/: README.md  simulate-presets.ts  tsconfig.json
idl/: hukt_hooks.json  hukt_registry.json
libs/hook-library/: Cargo.toml  README.md
libs/hook-library/src/: lib.rs
libs/hook-registry/: Cargo.toml  README.md
libs/hook-registry/src/: lib.rs
sdk/: package.json
sdk/account-resolver/: README.md  package.json  vitest.config.ts
sdk/account-resolver/src/: index.ts
sdk/account-resolver/test/: resolver.test.ts
sdk/cli/: README.md  package.json
sdk/cli/src/: index.ts
sdk/composability-adapter/: README.md  package.json
sdk/composability-adapter/src/: index.ts
sdk/composability-adapter/test/: adapter.test.ts
sdk/hook-builder/: README.md  package.json
sdk/hook-builder/src/: index.ts
sdk/hook-builder/test/: builder.test.ts
sdk/resolver/: README.md  package.json
sdk/resolver/src/: index.ts
