[package]
name = "hukt-registry"
version = "0.1.0"
description = "HUKT on-chain hook registry and attestation program"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hukt_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

# Registry only needs anchor-lang: bonds move native lamports via the System
# program (re-exported by anchor-lang), so anchor-spl is not required.
[dependencies]
anchor-lang = "0.31.1"
